New fonts + intro text

--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -1,11 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Bree+Serif&display=swap');
-@font-face {
-	font-family: 'Comic Sans';
-	src: url('/assets/ComicSansMS.ttf');
-}
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Quicksand&display=swap');
 
-$heading-font-family: 'Bree Serif', serif;
-$regular-font-family: 'Comic Sans', sans-serif;
+$heading-font-family: 'Quicksand', sans-serif;
+$regular-font-family: 'Montserrat', sans-serif;
 
 * {
   font-family: $regular-font-family;
