--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -10,4 +10,16 @@ $regular-font-family: 'Montserrat', sans-serif;
 h1, h2, h3, h4, h5, h6 {
   font-family: $heading-font-family;
   font-weight: normal;
+  margin-top: 0;
+  * ~ & {
+    margin-top: auto;
+  }
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+p {
+  font-size: 1.25rem;
 }
